--- a/vueblog/index.html
+++ b/vueblog/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="text/javascript" src="http://api.tianditu.gov.cn/api?v=4.0&tk=69d07625cbe4972246e674c1732e8753"></script>
     <title>风险评估</title>
   </head>
   <body style="margin:0">
